@@ -106,6 +106,7 @@
     + PowerDNS records cannot be created on slave zone;
     + Fixed subnet resizing bug if subnet contained slaves;
     + Added separate CSRF cookies for each address/subnet/pstn object;
+    + Deleted items are now shown and searchable from changelog;
 
 == 1.20.1
 
